# qbit-cli

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  TESTING.md  futech-gpg-public.asc
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
scripts/install/: install.ps1  install.sh  install_macos.sh  uninstall.ps1  uninstall.sh  uninstall_macos.sh
snapshots/: js_npm_run_args.snap  js_qbit_yml_template.snap
src/: cli.rs  config.rs  main.rs
src/developers/: common.rs  dart.rs  js.rs  mod.rs  py.rs
src/os/: install.rs  mod.rs  package_manager.rs  upgrade.rs
src/tools/: python_init.rs  runner.rs
src/utils/: python.rs  shell.rs
tests/: cli_help.rs  cli_run.rs
