[package]
name = "qbit-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.99"
notify = "8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0.25"
flate2 = "1.0.35"
tar = "0.4.43"
zip = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
serial_test = "3.2.0"
proptest = "1.6.0"
insta = "1.42.2"
